[JIRA] TH2-1209 App crashing fix and names of pins and boxes overflow handling

--- a/src/styles/box.scss
+++ b/src/styles/box.scss
@@ -53,6 +53,7 @@
 		line-height: 15px;
 		max-width: 165px;
 		overflow-wrap: break-word;
+		margin: 5px 0;
 	}
 
 	&__status {
@@ -173,6 +174,7 @@
 			background-color: #ffddcc;
 			border-radius: 6px;
 			gap: 4px;
+			padding: 0 5px;
 		}
 
 		&.open &-info {
@@ -191,7 +193,11 @@
 
 		&.active &-name,
 		&.active &-counter {
+			text-align: center;
 			color: $secondaryColor;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			white-space: nowrap;
 		}
 
 		&.active &-icon {
@@ -245,6 +251,7 @@
 			align-items: center;
 			padding: 2px 8px;
 			transition: background-color 0.1s ease-in-out;
+			min-width: 0;
 		}
 
 		&-name,
